<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.yinling.guard.ui.home.HomeFragment"
        android:label="@string/tab_home" />

    <fragment
        android:id="@+id/recordsFragment"
        android:name="com.yinling.guard.ui.records.RecordsFragment"
        android:label="@string/tab_records" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.yinling.guard.ui.settings.SettingsFragment"
        android:label="@string/tab_settings" />

    <fragment
        android:id="@+id/onboardingWelcomeFragment"
        android:name="com.yinling.guard.ui.onboarding.OnboardingWelcomeFragment"
        android:label="欢迎" />
    <fragment
        android:id="@+id/onboardingIntroFragment"
        android:name="com.yinling.guard.ui.onboarding.OnboardingIntroFragment"
        android:label="功能介绍" />
    <fragment
        android:id="@+id/onboardingPermissionFragment"
        android:name="com.yinling.guard.ui.onboarding.OnboardingPermissionFragment"
        android:label="开启权限" />
    <fragment
        android:id="@+id/onboardingDoneFragment"
        android:name="com.yinling.guard.ui.onboarding.OnboardingDoneFragment"
        android:label="设置完成" />

    <fragment
        android:id="@+id/familyHomeFragment"
        android:name="com.yinling.guard.ui.family.FamilyHomeFragment"
        android:label="子女管理" />
    <fragment
        android:id="@+id/keywordListFragment"
        android:name="com.yinling.guard.ui.family.KeywordListFragment"
        android:label="屏蔽词管理" />
    <fragment
        android:id="@+id/addKeywordFragment"
        android:name="com.yinling.guard.ui.family.AddKeywordFragment"
        android:label="添加屏蔽词" />
    <fragment
        android:id="@+id/blacklistFragment"
        android:name="com.yinling.guard.ui.family.BlacklistFragment"
        android:label="账号黑名单" />

    <action
        android:id="@+id/action_settings_to_family"
        app:destination="@id/familyHomeFragment" />
    <action
        android:id="@+id/action_family_to_keywords"
        app:destination="@id/keywordListFragment" />
    <action
        android:id="@+id/action_keywords_to_add"
        app:destination="@id/addKeywordFragment" />
    <action
        android:id="@+id/action_family_to_blacklist"
        app:destination="@id/blacklistFragment" />
</navigation>
